amend ukb_codings and ukb_data_dictionary to .rda extension from .Rdata

--- a/config.ini
+++ b/config.ini
@@ -5,8 +5,8 @@
 UKB_DB = ukb.db
 
 # .Rdata
-UKB_DATA_DICTIONARY = Rdata/ukb_data_dictionary.Rdata
-UKB_CODINGS = Rdata/ukb_codings.Rdata
+UKB_DATA_DICTIONARY = Rdata/ukb_data_dictionary.rda
+UKB_CODINGS = Rdata/ukb_codings.rda
 UKB_CODE_MAPPINGS = Rdata/ukb_code_mappings.Rdata
 
 # ***INFILES***
