amend ukb_primarycare_codings_to_db.R: save all_lkps_maps_v2 (ukb primary care code mappings file) as .rds instead of as .rdata

--- a/config.ini
+++ b/config.ini
@@ -7,7 +7,7 @@ UKB_DB = ukb.db
 # .Rdata
 UKB_DATA_DICTIONARY = Rdata/ukb_data_dictionary.Rdata
 UKB_CODINGS = Rdata/ukb_codings.Rdata
-UKB_CODE_MAPPINGS = Rdata/ukb_code_mappings.Rdata
+UKB_CODE_MAPPINGS = Rdata/ukb_code_mappings.rds
 
 # ***INFILES***
 # ukb data dictionary
